myteo/test/analyze/type_check/match/pattern.exp
Error: Expected type `Bool` but found `String`
test/analyze/type_check/match/pattern.myte:9:13-16
 9 |     | 2 when "a" -> 2
   |              ^^^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/match/pattern.myte:15:6
 15 |     | 1 -> 1
    |       ^

Error: Expected type `Bool` but found `Unit`
test/analyze/type_check/match/pattern.myte:20:6-8
 20 |     | () -> 1
    |       ^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/pattern.myte:25:6-8
 25 |     | () -> 1
    |       ^^

Error: Expected type `String` but found `Unit`
test/analyze/type_check/match/pattern.myte:30:6-8
 30 |     | () -> 1
    |       ^^

Error: Expected type `(Int, Int, Int)` but found `(a, b)`
test/analyze/type_check/match/pattern.myte:40:6-12
 40 |     | (_, _) -> ()
    |       ^^^^^^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/match/pattern.myte:60:7
 60 |       (x: Unit);
    |        ^

Error: Expected type `Unit` but found `Bool`
test/analyze/type_check/match/pattern.myte:61:7
 61 |       (y: Unit);
    |        ^

Error: Expected type `Variant1` but found `Variant2`
test/analyze/type_check/match/pattern.myte:77:6-17
 77 |     | Tup2 (x, y) -> ()
    |       ^^^^^^^^^^^

Error: Expected type `Variant1` but found `(a, b)`
test/analyze/type_check/match/pattern.myte:79:6-12
 79 |     | (x, y) -> ()
    |       ^^^^^^